// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoTab displays tab when tab is selected 1`] = `
<div
  className="tabInfo "
  id="#test_tab_text"
/>
`;

exports[`InfoTab renders as expected 1`] = `
<div
  className="tabInfo hidden"
  id="#test_tab_text"
/>
`;
